--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -13,7 +13,9 @@ $color-footer: #2e71d4;
 $color-light: #ffffff;
 $color-background: #f0eeee;
 
-// Importing Font's From Stylesheet 
+// Reset CSS
+@import 'reset';
+// Font import
 @import 'fonts';
 
 // Mixins
@@ -33,10 +35,9 @@ $color-background: #f0eeee;
 html {
   box-sizing: border-box;
   font-size: 16px;
-}
-
-body {
-  font-family: $font-family-primary;
+  body {
+    font-family: $font-family-primary;
+  }
 }
 
 a:link {
@@ -49,16 +50,12 @@ a:visited {
 }
 
 /* Navigation Styles --------------- */
-.mobile-nav {
+.nav {
   @include flex-one;
   position: relative;
   height: 60px;
   box-shadow: 0 1px 1px 1px #3a3d41;
-  #pool-logo {
-    max-width: 42%;
-    padding-left: 1.15rem;
-  }
-  span {
+  .nav__find {
     border: 2px solid $color-primary;
     color: $color-primary;
     padding: 0.5rem;
@@ -68,7 +65,7 @@ a:visited {
     font-weight: $font-bold;
     text-decoration-style: none;
   }
-  .mobile-menu {
+  .nav__link {
     margin-top: 1rem;
     width: 5rem;
     height: 3.25rem;
@@ -76,19 +73,32 @@ a:visited {
     margin: 0;
     z-index: 4;
   }
-  #mobile-menu-button {
+  .nav__button {
     max-width: 77%;
   }
 }
-.banner img {
+
+.nav__home {
+  width: 39%;
+  margin-right: 1.2rem;
+  .nav__logo {
+    max-width: 100%;
+    padding-left: 1.15rem;
+  }
+}
+
+
+.banner__img {
   width: 80%;
   padding-top: 2rem;
   padding-bottom: 1.5rem;
   transform: scale(1.5);
 }
 
-.nav-list a:hover {
-  color: $color-secondary;
+.navigation__list {
+  a:hover {
+    color: $color-secondary;
+  }
 }
 
 /* Filter Results Section --------------- */
@@ -97,54 +107,47 @@ a:visited {
   padding-top: 1rem;
   padding-bottom: 1rem;
   border-bottom: 0.5px solid #696b6d;
-  .filter-head {
+  .filters__head {
     @include flex-one;
     max-width: 90%;
     margin: 0 auto;
     span {
       padding: 1rem;
     }
-    #filter-result {
+    .filters__result {
       color: $color-primary;
       font-weight: $font-extraBold;
       margin-right: 0rem;
     }
   }
-  .filter {
-    background-color: $color-light;
-    padding: 1rem;
-    box-shadow: 0 0 2px 1px rgb(180, 178, 178);
-  }
 }
 
-.mobile-filter {
+.filters__mobile {
   display: flex;
   margin-right: 1rem;
   width: 9rem;
+  background-color: $color-light;
+  padding: 1rem;
+  box-shadow: 0 0 2px 1px rgb(180, 178, 178);
 }
 
-.filter-form {
+.filters__form {
   background-color: $color-light;
   max-width: 90%;
   margin: 1rem auto 0rem auto;
   padding: 2rem 1rem 1rem 1rem;
   display: none;
   box-shadow: 0 0 2px 1px rgb(180, 178, 178);
-  .question {
-    width: 5.5%;
-    position: relative;
-    top: 0.25rem;
-  }
-  input {
+  .filters__input {
     margin-bottom: 1.5rem;
   }
-  label {
+  .filters__label {
     padding-left: 7px;
   }
 }
 
 /* Business Section ---------- */
-main {
+.business__container {
   display: flex;
   flex-direction: column;
 }
@@ -155,23 +158,20 @@ main {
   width: 90%;
   margin: auto;
   box-shadow: 3px 3px 3px -3px #999, 3px 3px 3px -3px #999, -3px 3px 3px -3px #999;
-  h1 {
+  .business__title {
     margin-bottom: 1.5rem;
     font-size: 1.5rem;
   }
-  p {
+  .business__time {
     font-size: 0.85rem;
     margin-bottom: 1.5rem;
-  }
-  .business:hover {
-    transform: scale(1.03);
   }
   img {
     width: 12%;
   }
 }
 
-.phone {
+.business__phone {
   @include flex-one;
   background-color: $color-primary;
   color: $color-light;
@@ -179,10 +179,10 @@ main {
   border-radius: 5px;
   margin: 0rem auto 1.5rem auto;
   max-width: 80%;
-  #tap {
+  .business__call {
     font-size: 0.75rem;
   }
-  #number {
+  .business__number--desktop {
     font-weight: $font-bold;
   }
   img, span {
@@ -190,12 +190,12 @@ main {
   }
 }
 
-.talk {
+.business__talk {
   margin-bottom: 1.5rem !important;
   font-style: $font-italic;
 }
 
-.contact {
+.business__contact {
   @include flex-two;
   border-radius: 5px;
   margin: 0rem auto 1.5rem auto;
@@ -217,20 +217,19 @@ main {
   }
 }
 
-.contact-info {
+.business__info {
   margin-bottom: 1.5rem;
-  h2, p {
-    margin-bottom: 0.75rem !important;
-  }
-  h2 {
+  .business__hours {
     font-weight: $font-bold;
+    margin-bottom: 0.75rem;
   }
-  p {
+  .business__time {
     margin-top: 0;
+    margin-bottom: 0.75rem;
   }
 }
 
-.services {
+.business__services {
   @include flex-two;
   background-color: #e7e6e6;
   padding-top: 1.5rem;
@@ -238,9 +237,9 @@ main {
   font-size: 0.75rem;
   text-align: left;
   margin: 0 auto;
-  .service {
+  .business__service {
     margin-bottom: 0.5rem;
-    .hidden {
+    .business__service--hidden {
       visibility: hidden;
     }
   }
@@ -251,10 +250,10 @@ main {
 }
 
 /* Footer styles ---------- */
-footer {
+.footer__container {
   color: $color-light;
   text-align: center;
-  .footer-top {
+  .footer--top {
     background-color: $color-primary;
     padding-top: 1.5rem;
     img {
@@ -262,7 +261,7 @@ footer {
       margin: auto;
     }
   }
-  .footer-bottom {
+  .footer--bottom {
     background-color: #2e71d4;
     font-size: 0.80rem;
     padding-top: 1.25rem;
@@ -270,7 +269,7 @@ footer {
     p {
       font-weight: $font-light;
     }
-    #p-border {
+    .footer__text {
       border-bottom: 1px solid $color-light;
       max-width: 90%;
       margin: 0 auto 7px auto;
@@ -279,7 +278,7 @@ footer {
   }
 }
 
-.social {
+.footer__social {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -293,7 +292,7 @@ footer {
 }
 
 /* Mobile Drop Down ---------- */
-.mobile-nav-list-wrapper {
+.nav__menu {
   position: absolute;
   top: 100%;
   z-index: 2;
@@ -302,7 +301,7 @@ footer {
   border-top: 5px solid $color-secondary;
   border-bottom: 5px solid $color-secondary;
   display: none;
-  #mobile-nav-list-close {
+  .nav__close{
     position: absolute;
     right: 20px;
     top: 15px;
@@ -313,13 +312,13 @@ footer {
       color: $color-secondary;
     }
   }
-  .mobile-nav-list-title {
+  .nav__title {
     color: $color-primary;
     padding: 1.75rem;
     text-align: center;
     font-weight: $font-bold;
   }
-  .mobile-nav-list {
+  .nav__list {
     width: 100%;
     li {
       background-color: #e9e9e9;
@@ -350,19 +349,19 @@ footer {
 }
 
 /* Desktop Only ----- */
-.desktop-phone {
+.business__phone--desktop {
   display: none;
 }
 
-.nav, .desktop-nav {
+.navigation {
   display: none;
 }
 
-.desktop-filter {
+.filters__desktop {
   display: none;
 }
 
-.desktop-top {
+.top {
   display: none;
 }
 
@@ -378,7 +377,7 @@ footer {
   overflow: auto; 
   background-color: rgb(0,0,0); 
   background-color: rgba(0,0,0,0.4); 
-  .modal-content {
+  .modal__content {
     background-color: #fefefe;
     margin: 15% auto; 
     border: 1px solid #888;
@@ -386,21 +385,21 @@ footer {
   }
 }
 
-.close {
+.modal__close {
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: $font-bold;
 }
 
-.close:hover,
-.close:focus {
+.modal__close:hover,
+.modal__close:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
 }
 
-.modal-form {
+.modal__form {
   padding: 1rem;
   font-size: 0.85rem;
   label {
@@ -433,7 +432,7 @@ footer {
   }
 }
 
-.modal-title {
+.modal__title {
   background-color: $color-primary;
   color: $color-light;
   font-size: 1.25rem;
@@ -448,20 +447,20 @@ label.light {
   font-size: 0.80rem;
 }
 
-.question-section input {
+.modal__question input {
   width: 5% !important;
   height: 1rem !important;
   margin-bottom: 1rem;
 }
 
-.question-section p {
+.modal__question p {
   text-align: left;
 }
 
-.button-container {
+.modal__button {
   display: flex;
   justify-content: flex-end;
-  button {
+  .modal__submit {
     border: none;
     color: #29d4c6;
     font-size: 1.25rem;
