beginning stages of vanilla js mobile menu

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -91,14 +91,19 @@ a:visited {
 
 /* Navigation Styles --------------- */
 .nav {
+  position: relative; }
+
+.nav__content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
   height: 60px;
-  box-shadow: 0 1px 1px 1px #3a3d41; }
-  .nav .nav__find {
+  box-shadow: 0 1px 1px 1px #3a3d41;
+  background-color: #ffffff;
+  z-index: 10; }
+  .nav__content .nav__find {
     border: 2px solid #1f59b1;
+    z-index: 4;
     color: #1f59b1;
     padding: 0.5rem;
     border-radius: 5px;
@@ -106,22 +111,24 @@ a:visited {
     font-size: 0.90rem;
     font-weight: 700;
     text-decoration-style: none; }
-  .nav .nav__link {
+  .nav__content .nav__link {
     margin-top: 1rem;
     width: 5rem;
     height: 3.25rem;
     padding: 0;
     margin: 0;
     z-index: 4; }
-  .nav .nav__button {
+  .nav__content .nav__button {
     max-width: 77%; }
 
 .nav__home {
   width: 39%;
-  margin-right: 1.2rem; }
+  margin-right: 1.2rem;
+  z-index: 4; }
   .nav__home .nav__logo {
     max-width: 100%;
-    padding-left: 1.15rem; }
+    padding-left: 1.15rem;
+    z-index: 4; }
 
 .banner__img {
   width: 80%;
@@ -295,14 +302,16 @@ a:visited {
 
 /* Mobile Drop Down ---------- */
 .nav__menu {
-  position: absolute;
   top: 100%;
-  z-index: 2;
+  transition-property: all;
+  transition-duration: 0.75s;
+  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  position: absolute;
+  z-index: 1;
   background-color: #ffffff;
   width: 100%;
   border-top: 5px solid #1fb19e;
-  border-bottom: 5px solid #1fb19e;
-  display: none; }
+  border-bottom: 5px solid #1fb19e; }
   .nav__menu .nav__close {
     position: absolute;
     right: 20px;
