--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -36,6 +36,7 @@ html {
   font-size: 16px;
   body {
     font-family: $font-family-primary;
+    overflow: hidden;
   }
 }
 
@@ -306,7 +307,8 @@ a:visited {
 .nav__menu {
   top: 100%;
   transition-property: all;
-	transition-duration: 0.75s;
+  transition-duration: 0.75s;
+  overflow: hidden;
 	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
   position: absolute;
   z-index: 1;
