--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -81,7 +81,7 @@ html {
   font-size: 16px; }
   html body {
     font-family: "OpenSans", sans-serif;
-    overflow: hidden; }
+    overflow-x: hidden; }
 
 a:link {
   text-decoration: none; }
