--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -36,7 +36,7 @@ html {
   font-size: 16px;
   body {
     font-family: $font-family-primary;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 }
 
